--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "egg": "^1.3.0",
     "egg-bin": "^3.3.2",
+    "egg-jwt": "^1.1.0",
     "egg-mongoose": "^1.1.1",
     "egg-redis": "^1.0.1",
     "egg-socket.io": "^1.2.2",
